--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^6.0.21",
     "@mantine/hooks": "^6.0.21",
+    "@tabler/icons-react": "^3.35.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
