--- a/shared/data/appearance_settings.json
+++ b/shared/data/appearance_settings.json
@@ -1,1 +1,105 @@
-{"useTarget":true,"blips":{"outfits":{"color":3,"scale":0.7,"sprite":366,"name":"Outfits"},"tattoo":{"color":49,"scale":0.7,"sprite":75,"name":"Tattoo Parlor"},"barber":{"color":4,"scale":0.7,"sprite":71,"name":"Barber Shop"},"surgeon":{"color":2,"scale":0.7,"sprite":102,"name":"Plastic Surgeon"},"clothing":{"color":47,"scale":0.7,"sprite":73,"name":"Clothing Store"}},"enablePedsForShops":true}
+{
+    "blips": {
+        "tattoo": {
+            "scale": 0.7,
+            "sprite": 75,
+            "name": "Tattoo Parlor",
+            "color": 49
+        },
+        "outfits": {
+            "scale": 0.7,
+            "sprite": 366,
+            "name": "Outfits",
+            "color": 3
+        },
+        "barber": {
+            "scale": 0.7,
+            "sprite": 71,
+            "name": "Barber Shop",
+            "color": 4
+        },
+        "clothing": {
+            "scale": 0.7,
+            "sprite": 73,
+            "name": "Clothing Store",
+            "color": 47
+        },
+        "surgeon": {
+            "scale": 0.7,
+            "sprite": 102,
+            "name": "Plastic Surgeon",
+            "color": 2
+        }
+    },
+    "enablePedsForShops": true,
+    "useTarget": true,
+    "chargePerTattoo": false,
+    "prices": {
+        "clothing": 0,
+        "barber": 0,
+        "tattoo": 0,
+        "surgeon": 0
+    },
+    "initialClothes": {
+        "male": {
+            "model": "mp_m_freemode_01",
+            "components": [
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 }
+            ],
+            "props": [
+                { "drawable": -1, "texture": -1 },
+                { "drawable": -1, "texture": -1 },
+                { "drawable": -1, "texture": -1 },
+                { "drawable": -1, "texture": -1 },
+                { "drawable": -1, "texture": -1 }
+            ],
+            "hair": {
+                "color": 0,
+                "highlight": 0,
+                "style": 0,
+                "texture": 0
+            }
+        },
+        "female": {
+            "model": "mp_f_freemode_01",
+            "components": [
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 },
+                { "drawable": 0, "texture": 0 }
+            ],
+            "props": [
+                { "drawable": -1, "texture": -1 },
+                { "drawable": -1, "texture": -1 },
+                { "drawable": -1, "texture": -1 },
+                { "drawable": -1, "texture": -1 },
+                { "drawable": -1, "texture": -1 }
+            ],
+            "hair": {
+                "color": 0,
+                "highlight": 0,
+                "style": 0,
+                "texture": 0
+            }
+        }
+    }
+}
