Adds skin reload command with cooldown
Introduces a command to reload the player's appearance,
subject to a configurable cooldown period to prevent abuse.

Implements checks to disable the command under specific
circumstances, such as when the player is dead, in a vehicle,
or cuffed, based on configuration settings.

Refactors configuration to consolidate appearance settings
into a single JSON file and removes redundant configurations.

--- a/shared/data/appearance_settings.json
+++ b/shared/data/appearance_settings.json
@@ -1,105 +1,1 @@
-{
-    "blips": {
-        "tattoo": {
-            "scale": 0.7,
-            "sprite": 75,
-            "name": "Tattoo Parlor",
-            "color": 49
-        },
-        "outfits": {
-            "scale": 0.7,
-            "sprite": 366,
-            "name": "Outfits",
-            "color": 3
-        },
-        "barber": {
-            "scale": 0.7,
-            "sprite": 71,
-            "name": "Barber Shop",
-            "color": 4
-        },
-        "clothing": {
-            "scale": 0.7,
-            "sprite": 73,
-            "name": "Clothing Store",
-            "color": 47
-        },
-        "surgeon": {
-            "scale": 0.7,
-            "sprite": 102,
-            "name": "Plastic Surgeon",
-            "color": 2
-        }
-    },
-    "enablePedsForShops": true,
-    "useTarget": true,
-    "chargePerTattoo": false,
-    "prices": {
-        "clothing": 0,
-        "barber": 0,
-        "tattoo": 0,
-        "surgeon": 0
-    },
-    "initialClothes": {
-        "male": {
-            "model": "mp_m_freemode_01",
-            "components": [
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 }
-            ],
-            "props": [
-                { "drawable": -1, "texture": -1 },
-                { "drawable": -1, "texture": -1 },
-                { "drawable": -1, "texture": -1 },
-                { "drawable": -1, "texture": -1 },
-                { "drawable": -1, "texture": -1 }
-            ],
-            "hair": {
-                "color": 0,
-                "highlight": 0,
-                "style": 0,
-                "texture": 0
-            }
-        },
-        "female": {
-            "model": "mp_f_freemode_01",
-            "components": [
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 },
-                { "drawable": 0, "texture": 0 }
-            ],
-            "props": [
-                { "drawable": -1, "texture": -1 },
-                { "drawable": -1, "texture": -1 },
-                { "drawable": -1, "texture": -1 },
-                { "drawable": -1, "texture": -1 },
-                { "drawable": -1, "texture": -1 }
-            ],
-            "hair": {
-                "color": 0,
-                "highlight": 0,
-                "style": 0,
-                "texture": 0
-            }
-        }
-    }
-}
+{"blips":{"outfits":{"scale":0.7,"name":"Outfits","color":3,"sprite":366},"tattoo":{"scale":0.7,"name":"Tattoo Parlor","color":49,"sprite":75},"barber":{"scale":0.7,"name":"Barber Shop","color":4,"sprite":71},"surgeon":{"scale":0.7,"name":"Plastic Surgeon","color":2,"sprite":103},"clothing":{"scale":0.7,"name":"Clothing Store","color":47,"sprite":73}},"initialClothes":{"female":{"hair":{"style":12,"color":0,"highlight":0,"texture":0},"props":[{"texture":-1,"drawable":-1},{"texture":-1,"drawable":-1},{"texture":-1,"drawable":-1},{"texture":-1,"drawable":-1},{"texture":-1,"drawable":-1}],"components":[{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0}],"model":"mp_f_freemode_01"},"male":{"hair":{"style":0,"color":0,"highlight":0,"texture":0},"props":[{"texture":-1,"drawable":-1},{"texture":-1,"drawable":-1},{"texture":-1,"drawable":-1},{"texture":-1,"drawable":-1},{"texture":-1,"drawable":-1}],"components":[{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0},{"texture":0,"drawable":0}],"model":"mp_m_freemode_01"}},"prices":{"surgeon":0,"tattoo":0,"barber":0,"clothing":300},"chargePerTattoo":false,"useTarget":false,"useRadialMenu":false,"enablePedsForShops":false}
